--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,8 @@
     <td>{{i + 1}}</td>
     <td>{{user.name}}</td>
     <td>{{user.age}}</td>
-  </tr> 
+  </tr>
 </table>
+
+
+<button (click)="addData()">Add Record</button>
